Implement semiring solver